--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
 <body>    
           <!-- header section start -->
           <header>
-          <div class="header-container">
-                    <div class="header-text">
-                    <h1 class="header-title">Let's make <br> beautiful flowers a <br> part of your life.        
-                    </h1>
-                    <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-                    <button class="bnt-primary">Shop Now</button>
+                    <div class="container banner">
+                              <div class="banner-text">
+                                        <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+                                        <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                                        <button class="btn-primary">Shop Now</button>
+                              </div>
+                              <div class="banner-images">
+                                        <img src="./Flower Asset/pngwing 10.png" alt="">
+                              </div>
                     </div>
-
-                    <div class="images-content">
-                              <img src="./Flower Asset/pngwing 10.png" alt="">
-                    </div>
-          </div>
-
           </header>
-          <!-- header section close -->
-          
+         
 </body>
 </html>
