featured work comple

--- a/index.html
+++ b/index.html
@@ -20,6 +20,47 @@
                               </div>
                     </div>
           </header>
+          <!-- featured-section start -->
+          <section id="featured">
+                    <div class="container">
+                              <div class="section-heading">
+                                        <h1 class="section-title">Our Featured Flowers</h1>
+                                        <p class="section-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                              </div>
+                              <div class="flower-container">
+
+                                        <div class="flower-items">
+                                                  <div style="background: rgba(167, 33, 98, 0.15);" class="flower-images  ">
+                                                            <img src="./Flower Asset/pngwing 6.png" alt="">
+                                                  </div>
+                                                  <div class="flower-name">
+                                                            <p>Pink Flower Tree</p>
+                                                  </div>
+                                        </div>
+
+                                        <div class="flower-items">
+                                                  <div style="background: rgba(5, 151, 160, 0.15);
+
+                                                  1x
+                                                  " class="flower-images">
+                                                            <img src="Flower Asset/pngwing 5.png">
+                                                  </div>
+                                                  <div class="flower-name">
+                                                            <p>Pink Flower Tree</p>
+                                                  </div>
+                                        </div>
+
+                                        <div class="flower-items">
+                                                  <div style="background-color: #477D1126;" class="flower-images">
+                                                            <img src="./Flower Asset/pngwing 7.png" alt="">
+                                                  </div>
+                                                  <div class="flower-name">
+                                                            <p>Pink Flower Tree</p>
+                                                  </div>
+                                        </div>
+                              </div>
+                    </div>
+          </section>
          
 </body>
 </html>
